[gd_scene load_steps=15 format=3 uid="uid://dkotoacibrqxi"]

[ext_resource type="PackedScene" uid="uid://c63ybhvyl7gns" path="res://Scenes/UI/Equipment/EquipmentSlot.tscn" id="1_5vonj"]
[ext_resource type="PackedScene" uid="uid://c4gpfq7ddjrnv" path="res://Scenes/UI/Equipment/EmptySlot.tscn" id="1_6nppe"]
[ext_resource type="Script" path="res://Scripts/CharacterScreen.gd" id="1_pg0qn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ambw"]
bg_color = Color(0.109804, 0.054902, 0.0117647, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.517647, 0.329412, 0.192157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dis48"]
bg_color = Color(0.133333, 0.0823529, 0.0509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.517647, 0.329412, 0.192157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_23cpc"]
bg_color = Color(0.133333, 0.0823529, 0.0509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.517647, 0.329412, 0.192157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmyaq"]
bg_color = Color(0.423529, 0.337255, 0.298039, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wfyxe"]
bg_color = Color(0.360784, 0.25098, 0.164706, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_fll0q"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_mmyaq")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_wfyxe")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1pai"]
bg_color = Color(0.109804, 0.054902, 0.0117647, 0.717647)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.517647, 0.329412, 0.192157, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ut6oq"]
bg_color = Color(0.423529, 0.337255, 0.298039, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5bjr"]
bg_color = Color(0.870588, 0.870588, 0.870588, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ymths"]
bg_color = Color(0.360784, 0.25098, 0.164706, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3wry3"]

[node name="CharacterScreen" type="Control"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 3
anchors_preset = 0
offset_right = 300.0
offset_bottom = 500.0
script = ExtResource("1_pg0qn")

[node name="Character" type="Panel" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3ambw")

[node name="VBoxContainer" type="VBoxContainer" parent="Character"]
layout_mode = 0
offset_left = 15.0
offset_top = 20.0
offset_right = 285.0
offset_bottom = 480.0

[node name="EquipmentPanel" type="Panel" parent="Character/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dis48")

[node name="Equipment" type="VBoxContainer" parent="Character/VBoxContainer/EquipmentPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -70.0
offset_right = 52.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="FirstRow" type="GridContainer" parent="Character/VBoxContainer/EquipmentPanel/Equipment"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="EmptySlot" parent="Character/VBoxContainer/EquipmentPanel/Equipment/FirstRow" instance=ExtResource("1_6nppe")]
layout_mode = 2

[node name="Head" parent="Character/VBoxContainer/EquipmentPanel/Equipment/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EmptySlot2" parent="Character/VBoxContainer/EquipmentPanel/Equipment/FirstRow" instance=ExtResource("1_6nppe")]
layout_mode = 2

[node name="SecondRow" type="GridContainer" parent="Character/VBoxContainer/EquipmentPanel/Equipment"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="Ring" parent="Character/VBoxContainer/EquipmentPanel/Equipment/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="Neck" parent="Character/VBoxContainer/EquipmentPanel/Equipment/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="Hand" parent="Character/VBoxContainer/EquipmentPanel/Equipment/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="ThirdRow" type="GridContainer" parent="Character/VBoxContainer/EquipmentPanel/Equipment"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="Weapon" parent="Character/VBoxContainer/EquipmentPanel/Equipment/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="Armor" parent="Character/VBoxContainer/EquipmentPanel/Equipment/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="Aux" parent="Character/VBoxContainer/EquipmentPanel/Equipment/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="FourthRow" type="GridContainer" parent="Character/VBoxContainer/EquipmentPanel/Equipment"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 3

[node name="EmptySlot" parent="Character/VBoxContainer/EquipmentPanel/Equipment/FourthRow" instance=ExtResource("1_6nppe")]
layout_mode = 2

[node name="Boots" parent="Character/VBoxContainer/EquipmentPanel/Equipment/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EmptySlot2" parent="Character/VBoxContainer/EquipmentPanel/Equipment/FourthRow" instance=ExtResource("1_6nppe")]
layout_mode = 2

[node name="InventoryPanel" type="Panel" parent="Character/VBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_23cpc")

[node name="ScrollContainer" type="ScrollContainer" parent="Character/VBoxContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -112.0
offset_right = 135.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fll0q")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Inventory" type="VBoxContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="FirstRow" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FirstRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="SecondRow" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SecondRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="ThirdRow" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/ThirdRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="FourthRow" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FourthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="FifthRow" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/FifthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="SixthRow" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="SixthRow2" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow2" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="SixthRow3" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow3" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="SixthRow4" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow4" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="SixthRow5" type="GridContainer" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory"]
layout_mode = 2
theme_override_constants/h_separation = 4
columns = 7

[node name="EquipmentSlot" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Character/VBoxContainer/InventoryPanel/ScrollContainer/Inventory/SixthRow5" instance=ExtResource("1_5vonj")]
layout_mode = 2

[node name="Stats" type="Panel" parent="Character"]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = -150.0
offset_bottom = 500.0
theme_override_styles/panel = SubResource("StyleBoxFlat_t1pai")

[node name="VBoxContainer" type="VBoxContainer" parent="Character/Stats"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 495.0

[node name="StatsTitle" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Statistics"
horizontal_alignment = 1

[node name="Main" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Main:"

[node name="Str" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "- Strength: xxxx"

[node name="Ag" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "- Agility: xxxx"

[node name="Int" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "- Intelect: xxxx"

[node name="Offence" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Offence:"

[node name="SA" type="Label" parent="Character/Stats/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "- Strength: xxxx"

[node name="CloseButton" type="Button" parent="Character"]
layout_mode = 0
offset_left = 283.0
offset_top = 2.0
offset_right = 298.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_ut6oq")
theme_override_styles/hover = SubResource("StyleBoxFlat_m5bjr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ymths")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3wry3")
text = "x"
icon_alignment = 1

[node name="ExpandStatsButton" type="Button" parent="Character"]
layout_mode = 0
offset_left = 25.0
offset_top = 212.0
offset_right = 96.0
offset_bottom = 230.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_ut6oq")
theme_override_styles/hover = SubResource("StyleBoxFlat_m5bjr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ymths")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3wry3")
text = "Expand stats"
icon_alignment = 1

[connection signal="pressed" from="Character/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Character/ExpandStatsButton" to="." method="_on_expand_stats_button_pressed"]
